--- a/src/services.html
+++ b/src/services.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.min.css"></head>
 <body><header class="header">
-<div class="header__wrapper"><h2 class="header__logo"><span class="header__title">Персональный тренер по пилатесу Ирина Олейниченко</span><img src="img/logo.png" width="200" height="60" alt="Пилатес"></h2><nav class="header__nav main-nav main-nav--closed main-nav--nojs">
+<div class="header__wrapper"><h2 class="header__logo"><span class="header__title">Персональный тренер по пилатесу Ирина Олейниченко</span><a href='index.html' class="header__logo-img"><img src="img/logo.png" width="200" height="60" alt="Пилатес"></a></h2><nav class="header__nav main-nav main-nav--closed main-nav--nojs">
 <button type="button" class="hamburger"></button>
 <div class="main-nav__wrapper"><ul class="menu-main menu-main--header"><li class="menu-main__item"><a class="menu-main__link" href="index.html">Главная</a></li><li class="menu-main__item"><a class="menu-main__link" href="trainer.html">О тренере</a></li><li class="menu-main__item menu-main__item--active"><a class="menu-main__link">Услуги</a></li><li class="menu-main__item"><a class="menu-main__link" href="slim-programm.html">SlimProgramm</a></li><li class="menu-main__item"><a class="menu-main__link" href="previews.html">Статьи</a></li></ul></div>
 </nav>
