--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Персональный тренер по пилатесу</title>
-<meta name="description" content="Пилатес в Киеве от одного из лучших тренеров Украины. Начните знакомство с pilates методикой под руководством профессионала"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Персональный тренер по пилатесу в Киеве</title>
+<meta name="description" content="Пилатес в Киеве от одного из лучших тренеров Украины. Начните заниматься pilates методикой индивидуально с персональным тренером по пилатесу"><meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif:400,400i&amp;subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.min.css"></head>
@@ -37,7 +37,7 @@
 </div>
 <div class="content__block grid__block">
 <p>Для меня пилатес - одно из основных занятий в жизни. Я люблю эту методику и искренне рекомендую вам узнать ее огромные преимущества над другими техниками.</p>
-<p>Обязательно зайдите в раздел Пилатес, что это? и узнайте все об упражнениях от которых в восторге миллионы людей в мире!</p>
+<p><a href="feedback.html#training" class="content__btn btn-inclined-lines btn-inclined-lines--white">Заказать тренировку</a></p>
 </div>
 </div>
 </div>
@@ -45,17 +45,17 @@
 <h2 class="blocks__title">Ссылки на интересные статьи о пилатесе</h2>
 <section class="blocks__item">
 <h2 class="blocks__item-title">Частые вопросы</h2>
-<a href="" class="blocks__item-link">Нужен ли мне пилатес?</a>
-<a href="" class="blocks__item-link">С чего начать?</a>
-<a href="" class="blocks__item-link">Как часто заниматься?</a>
-<a href="" class="blocks__item-link">Сколько стоят тренировки в Киеве?</a>
+<a href="what-is-pilates.html" class="blocks__item-link">Что такое пилатес?</a>
+<a href="do-i-need-pilates.html" class="blocks__item-link">Нужен ли мне пилатес?</a>
+<a href="what-to-expect.html" class="blocks__item-link">На что можно расчитывать?</a>
+<a href="stomack.html" class="blocks__item-link">Как похудеть с пилатесом?</a>
 </section>
 <section class="blocks__item blocks__item--wide">
 <h2 class="blocks__item-title">Самые читаемые материалы</h2>
-<a href="" class="blocks__item-link">Главные принципы пилатеса</a>
-<a href="" class="blocks__item-link">Реальные пилатес отзывы из интернета</a>
-<a href="" class="blocks__item-link">Пилатес для чайников - 12 советов от профи</a>
-<a href="" class="blocks__item-link">Пилатес для похудения: когда это возможно?</a>
+<a href="main-principles.html" class="blocks__item-link">Главные принципы пилатеса</a>
+<a href="bad-legs.html" class="blocks__item-link">Болят ноги? Безнадежных больных нет!</a>
+<a href="pilates-for-dummies.html" class="blocks__item-link">Пилатес для чайников - история создания</a>
+<a href="slim-programm.html" class="blocks__item-link">Пилатес для похудения: когда это возможно?</a>
 </section>
 </section></main><footer class="footer">
 <div class="footer__wrapper">
@@ -70,8 +70,8 @@
 <a href="" class="social__link social__link--in">Youtube</a>
 </span>
 </p>
-<p class="footer__copyright">Разработано:
-<a href="" class="footer__copyright-link btn-inclined-lines">INDAY</a>
+<p class="footer__copyright">
+<a href="feedback.html#letter" class="footer__copyright-link btn-inclined-lines">Обратная связь</a>
 </p>
 </div>
 </footer><script src="js/hamburger.js"></script></body>
