--- a/src/slim-programm.html
+++ b/src/slim-programm.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Персональный тренер по пилатесу</title>
+<title>Прграмма по похудения с помощью методики Пилатеса</title>
 <meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif:400,400i&amp;subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
@@ -17,7 +17,7 @@
 <div class="substrate">
 <article class="substrate__content article"><h3>Как похудеть наверняка и надолго?</h3>
 <h1>Пилатес упражнения в авторской методике для женщин „Осознанное избавление от лишнего веса“</h1>
-<p>За 14 лет опыта персональных тренировок, выработала методику, которая позволяет гарантировано добиться результата в, кажущейся многим, такой непосильной задаче по обретению стройной, подтянутой фигуры. Все ее выводы проверены и отточены в индивидуальной работе с десятками клиентов.</p>
+<p>За 14 лет опыта персональных тренировок, я выработала методику, которая позволяет гарантировано добиться результата в, кажущейся многим, такой непосильной задаче по обретению стройной, подтянутой фигуры. Все ее выводы проверены и отточены в индивидуальной работе с десятками клиентов.</p>
 <p>Уверена, что вами уже наверняка предпринимались какие-то шаги в направлении похудения и, возможно, даже вполне успешные, в том плане, что вес вы действительно потеряли, но</p>
 <ul>
 <li>или же не столько, как хотелось,</li>
@@ -65,7 +65,7 @@
 <li>сильной мотивации.</li>
 </ul>
 <p>Именно эти факторы я предлагаю вам получить от меня. Укажите свой email и я вышлю более детально расписанную методику и программы тренировок</p>
-<p><a href="feedback.htm" class="article__btn btn-inclined-lines btn-inclined-lines--white">Получить методику</a></p>
+<p><a href="feedback.html#slimprogramm" class="article__btn btn-inclined-lines btn-inclined-lines--white">Получить методику</a></p>
 <blockquote class="blockquote">
 <p><span class="blockquote__quotes blockquote__quotes--screamer">Ваша</span> фигура в ваших руках и зависит сейчас только от решительности!</p>
 </blockquote></article>
@@ -83,8 +83,8 @@
 <a href="" class="social__link social__link--in">Youtube</a>
 </span>
 </p>
-<p class="footer__copyright">Разработано:
-<a href="" class="footer__copyright-link btn-inclined-lines">INDAY</a>
+<p class="footer__copyright">
+<a href="feedback.html#letter" class="footer__copyright-link btn-inclined-lines">Обратная связь</a>
 </p>
 </div>
 </footer><script src="js/hamburger.js"></script></body>
