--- a/src/stomack.html
+++ b/src/stomack.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Персональный тренер по пилатесу</title>
+<title>Как убрать живот и бока быстро. Упражнения для живота от Джозефа Пилатеса</title>
 <meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif:400,400i&amp;subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
@@ -114,8 +114,8 @@
 <a href="" class="social__link social__link--in">Youtube</a>
 </span>
 </p>
-<p class="footer__copyright">Разработано:
-<a href="" class="footer__copyright-link btn-inclined-lines">INDAY</a>
+<p class="footer__copyright">
+<a href="feedback.html#letter" class="footer__copyright-link btn-inclined-lines">Обратная связь</a>
 </p>
 </div>
 </footer><script src="js/hamburger.js"></script></body>
