--- a/src/trainer.html
+++ b/src/trainer.html
@@ -43,17 +43,17 @@
 <h2 class="blocks__title">Ссылки на интересные статьи о пилатесе</h2>
 <section class="blocks__item">
 <h2 class="blocks__item-title">Частые вопросы</h2>
-<a href="" class="blocks__item-link">Нужен ли мне пилатес?</a>
-<a href="" class="blocks__item-link">С чего начать?</a>
-<a href="" class="blocks__item-link">Как часто заниматься?</a>
-<a href="" class="blocks__item-link">Сколько стоят тренировки в Киеве?</a>
+<a href="what-is-pilates.html" class="blocks__item-link">Что такое пилатес?</a>
+<a href="do-i-need-pilates.html" class="blocks__item-link">Нужен ли мне пилатес?</a>
+<a href="what-to-expect.html" class="blocks__item-link">На что можно расчитывать?</a>
+<a href="stomack.html" class="blocks__item-link">Как похудеть с пилатесом?</a>
 </section>
 <section class="blocks__item blocks__item--wide">
 <h2 class="blocks__item-title">Самые читаемые материалы</h2>
-<a href="" class="blocks__item-link">Главные принципы пилатеса</a>
-<a href="" class="blocks__item-link">Реальные пилатес отзывы из интернета</a>
-<a href="" class="blocks__item-link">Пилатес для чайников - 12 советов от профи</a>
-<a href="" class="blocks__item-link">Пилатес для похудения: когда это возможно?</a>
+<a href="main-principles.html" class="blocks__item-link">Главные принципы пилатеса</a>
+<a href="bad-legs.html" class="blocks__item-link">Болят ноги? Безнадежных больных нет!</a>
+<a href="pilates-for-dummies.html" class="blocks__item-link">Пилатес для чайников - история создания</a>
+<a href="slim-programm.html" class="blocks__item-link">Пилатес для похудения: когда это возможно?</a>
 </section>
 </section></main><footer class="footer">
 <div class="footer__wrapper">
@@ -68,8 +68,8 @@
 <a href="" class="social__link social__link--in">Youtube</a>
 </span>
 </p>
-<p class="footer__copyright">Разработано:
-<a href="" class="footer__copyright-link btn-inclined-lines">INDAY</a>
+<p class="footer__copyright">
+<a href="feedback.html#letter" class="footer__copyright-link btn-inclined-lines">Обратная связь</a>
 </p>
 </div>
 </footer><script src="js/hamburger.js"></script></body>
