update social and make documents

--- a/src/slim-programm.html
+++ b/src/slim-programm.html
@@ -49,8 +49,7 @@
 <h2>Какие средства я использую для похудения?</h2>
 <ul>
 <li>упражнения пилатес, выполняемые с мельчайшими ньюансами,</li>
-<li>специальная музыка известного медико-биологического института, устраняющая психологические причины, приводящие к избыточному весу,</li>
-<li>cамые действенные правила питания, на основании разработок Галины Гроссман,</li>
+<li>cамые действенные правила питания, на основании разработок современных диетологов,</li>
 <li>множество мотивационных фишек, из которых самая главная, это ежедневное фиксирование достигнутых результатов.</li>
 </ul>
 <p>Как правило, достаточно 7-10 индивидуальных тренировок (я приезжаю к вам), чтобы передать основу системы и дальше самостоятельно и максимально уверенно идти к состоянию стройности в теле и легкости в мыслях.</p>
@@ -74,13 +73,13 @@
 <div class="footer__wrapper">
 <p class="footer__contacts">
 <b class="footer__contacts-name">Ирина Олейниченко</b> Персональный тренер <span class="footer__contacts-nowrap">по методике Пилатес</span><br>
-<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 865-82-18</a>
+<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 817-32-15</a>
 </p>
 <p class="footer__social">
 <span class="social">
-<a href="" class="social__link social__link--vk">ВКОНТАКТЕ</a>
-<a href="" class="social__link social__link--fb">Фейсбук</a>
-<a href="" class="social__link social__link--in">Youtube</a>
+<a href="https://t.me/joinchat/oTETx7-UIlw1OGRi" target="_blank" class="social__link social__link--tg">Телеграмм</a>
+<a href="https://www.facebook.com/groups/365543427956070/" target="_blank" class="social__link social__link--fb">Фейсбук</a>
+<a href="https://www.instagram.com/eda_voda_fizra/" target="_blank" class="social__link social__link--in">Instagram</a>
 </span>
 </p>
 <p class="footer__copyright">
