--- a/src/index.html
+++ b/src/index.html
@@ -61,13 +61,13 @@
 <div class="footer__wrapper">
 <p class="footer__contacts">
 <b class="footer__contacts-name">Ирина Олейниченко</b> Персональный тренер <span class="footer__contacts-nowrap">по методике Пилатес</span><br>
-<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 865-82-18</a>
+<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 817-32-15</a>
 </p>
 <p class="footer__social">
 <span class="social">
-<a href="" class="social__link social__link--vk">ВКОНТАКТЕ</a>
-<a href="" class="social__link social__link--fb">Фейсбук</a>
-<a href="" class="social__link social__link--in">Youtube</a>
+<a href="https://t.me/joinchat/oTETx7-UIlw1OGRi" target="_blank" class="social__link social__link--tg">Телеграмм</a>
+<a href="https://www.facebook.com/groups/365543427956070/" target="_blank" class="social__link social__link--fb">Фейсбук</a>
+<a href="https://www.instagram.com/eda_voda_fizra/" target="_blank" class="social__link social__link--in">Instagram</a>
 </span>
 </p>
 <p class="footer__copyright">
