--- a/src/services.html
+++ b/src/services.html
@@ -34,7 +34,7 @@
 <img src="img/exercise-legs-1x.png" alt="">
 </div>
 <div class="content__block grid__block">
-<p>Стоимость персональной тренировки <i>400 грн</i> (60 мин). Приобретая абонемент на 8 занятий вы экономите 400 грн. Я уверяю вас, что 34 упражнения Джозефа Пилатеса, при должном усердии, способны сотворить чудо. Заказывайте первую тренировку!</p>
+<p>Я предлагаю: занятия онлайн, индивидуальные тренировки для женщин на вашей территории и корпоративные занятия. Стоимость тренировки вживую <i>800 грн </i> (45 мин), онлайн – цена договорная. Уверяю вас - 34 упражнения Джозефа Пилатеса, при должном усердии, способны сотворить чудо.</p>
 <p><a href="feedback.html#training" class="content__btn btn-inclined-lines btn-inclined-lines--white">Заказать тренировку</a></p>
 </div>
 </div>
@@ -59,13 +59,13 @@
 <div class="footer__wrapper">
 <p class="footer__contacts">
 <b class="footer__contacts-name">Ирина Олейниченко</b> Персональный тренер <span class="footer__contacts-nowrap">по методике Пилатес</span><br>
-<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 865-82-18</a>
+<a href="tel: +380508173215" class="btn-inclined-lines"><span class="footer__contacts-hidden">Тел.:</span> +38 (050) 817-32-15</a>
 </p>
 <p class="footer__social">
 <span class="social">
-<a href="" class="social__link social__link--vk">ВКОНТАКТЕ</a>
-<a href="" class="social__link social__link--fb">Фейсбук</a>
-<a href="" class="social__link social__link--in">Youtube</a>
+<a href="https://t.me/joinchat/oTETx7-UIlw1OGRi" target="_blank" class="social__link social__link--tg">Телеграмм</a>
+<a href="https://www.facebook.com/groups/365543427956070/" target="_blank" class="social__link social__link--fb">Фейсбук</a>
+<a href="https://www.instagram.com/eda_voda_fizra/" target="_blank" class="social__link social__link--in">Instagram</a>
 </span>
 </p>
 <p class="footer__copyright">
